--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -173,7 +173,7 @@
 <body>
   <h1>
     <span style="display: flex; align-items: center; gap: 8px;">
-      <img src="logo.png" alt="Automobile Complete" /> Automobile Complete
+      <img src="icon128.png" alt="Automobile Complete" /> Automobile Complete
     </span>
     <label class="toggle-switch">
       <input type="checkbox" id="modeToggle" />
